minor async updates [skip appveyor][skip circleci]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ exclude = '''
     | \.venv
     | \.misc
     | _build
-    | buck-out
+    | __pycache__
     | build
     | dist
     | external
