network + kokkos-connector + CUDA standard
- Disable building network component lib on non-linux systems
- Work-around for building kp_timemory_gpu_roofline when CUDA standard differs from C++ standard
- Removed ROOFLINE_MODE_CPU "mp" option

--- a/source/timemory/components/network/CMakeLists.txt
+++ b/source/timemory/components/network/CMakeLists.txt
@@ -1,4 +1,8 @@
 
+if(NOT UNIX OR APPLE)
+    return()
+endif()
+
 set(NAME network)
 
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
