--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -20,7 +20,7 @@ jobs:
             BUILD_TYPE: 'RelWithDebInfo'
             PACKAGES: 'clang-7 build-essential libmpich-dev mpich ccache'
             BUILD_ARGS: '--minimal --build-libs shared static --python --mpi --gotcha --stats --tools mallocp mpip --cxx-standard=17'
-            CTEST_ARGS: '-VV'
+            CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_UNITY_BUILD=OFF -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
           - CC: clang-8
             CXX: clang++-8
@@ -35,7 +35,7 @@ jobs:
             BUILD_TYPE: 'MinSizeRel'
             PACKAGES: 'clang-9 build-essential libopenmpi-dev openmpi-bin openmpi-common libfabric-dev ccache'
             BUILD_ARGS: '--quick --build-libs shared --mpi --gotcha --tools mallocp mpip ompt --cxx-standard=14'
-            CTEST_ARGS: '-VV'
+            CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
           - CC: gcc-6
             CXX: g++-6
@@ -43,8 +43,8 @@ jobs:
             PYTHON_VERSION: '3.6'
             BUILD_TYPE: 'RelWithDebInfo'
             PACKAGES: 'gcc-6 g++-6 gfortran-6 build-essential libtbb-dev ccache'
-            BUILD_ARGS: '--minimal --build-libs shared --python --gotcha --stats --cxx-standard=14'
-            CTEST_ARGS: '-VV'
+            BUILD_ARGS: '--minimal --build-libs shared --python --arch --extra-optimizations --caliper --cxx-standard=14'
+            CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON -DTIMEMORY_BUILD_PYTHON_UNITY=OFF'
           - CC: gcc-7
             CXX: g++-7
@@ -62,7 +62,7 @@ jobs:
             BUILD_TYPE: 'Release'
             PACKAGES: 'gcc-8 g++-8 gfortran-8 build-essential libmpich-dev mpich ccache'
             BUILD_ARGS: '--minimal --build-libs shared --mpi --gotcha --stats --tools compiler --cxx-standard=17'
-            CTEST_ARGS: '-VV'
+            CTEST_ARGS: '-V --output-on-failure'
             CONFIG_ARGS: '-DTIMEMORY_CCACHE_BUILD=ON'
           - CC: gcc-9
             CXX: g++-9
@@ -155,13 +155,14 @@ jobs:
           cmake --build . --target install --parallel $(nproc)
 
       - name: Test Python Build
+        if: ${{ matrix.BUILD_TYPE != 'Debug' }}
         working-directory: ${{github.workspace}}/build-timemory/Linux
         run: |
           source activate
           conda activate pyctest
           if [ -f "tests/test-python-install-import.cmake" ]; then
             cmake -P tests/test-python-install-import.cmake;
-            PYTHONPATH=. $(which pytest);
+            PYTHONPATH=. $(which pytest) -s;
           fi
 
       - name: Import Python Install
