--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,24 @@
-version: 1.0.{build}
+version: 2.0.{build}
 
-# https://developercommunity.visualstudio.com/content/problem/457095/cannot-bind-temporary-int-object-to-an-rvalue-refe.html
-# ^ this issue has caused support to be dropped for Visual Studio 2017
+skip_commits:
+  files:
+    - docs/*
+    - .github/*
+    - scripts/*
+    - recipe/*
+    - spack/*
+    - docker/*
+    - '**/*.md'
+    - pyproject.toml
+    - pytest.ini
+    - requirements.txt
+    - setup.*
+    - VERSION
+
+skip_tags: true
+skip_branch_with_pr: true
+max_jobs: 2
+
 image:
   - Visual Studio 2019
 
