Support for HIP backend for ERT
- Update TIMEMORY_COMPONENT_TYPES

--- a/source/timemory/components/CMakeLists.txt
+++ b/source/timemory/components/CMakeLists.txt
@@ -9,6 +9,7 @@ add_subdirectory(data_tracker)
 add_subdirectory(gotcha)
 add_subdirectory(gperftools)
 add_subdirectory(likwid)
+add_subdirectory(hip)
 add_subdirectory(io)
 add_subdirectory(network)
 add_subdirectory(ompt)
