--- a/source/timemory/ert/CMakeLists.txt
+++ b/source/timemory/ert/CMakeLists.txt
@@ -4,6 +4,7 @@ if(NOT TIMEMORY_BUILD_ERT)
 endif()
 
 set(CMAKE_UNITY_BUILD OFF)
+set(_DEPENDS)
 
 file(GLOB_RECURSE header_files ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)
 file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
@@ -11,6 +12,17 @@ file(GLOB_RECURSE source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 if(TIMEMORY_USE_CUDA AND CMAKE_CUDA_COMPILER)
     file(GLOB_RECURSE cu_source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
     list(APPEND source_files ${cu_source_files})
+elseif(TIMEMORY_USE_HIP)
+    file(GLOB_RECURSE cu_source_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
+    set_source_files_properties(${cu_source_files} PROPERTIES LANGUAGE CXX)
+    add_library(timemory-ert-hip-object EXCLUDE_FROM_ALL OBJECT ${cu_source_files})
+    target_link_libraries(timemory-ert-hip-object PRIVATE
+        timemory::timemory-vector
+        timemory::timemory-hip
+        timemory::timemory-core
+        timemory::timemory-roofline-options
+        hip::device)
+    list(APPEND source_files $<TARGET_OBJECTS:timemory-ert-hip-object>)
 endif()
 
 build_intermediate_library(
@@ -23,6 +35,14 @@ build_intermediate_library(
     SOURCES             ${source_files}
     DEPENDS             timemory::timemory-vector
                         timemory::timemory-cuda
+                        timemory::timemory-hip
                         timemory::timemory-core
-                        timemory::timemory-manager
     PRIVATE_LINK        timemory::timemory-roofline-options)
+
+if(TARGET timemory-ert-hip-object)
+    foreach(_LINK shared static)
+        if(TARGET timemory-ert-${_LINK})
+            # add_dependencies(timemory-ert-${_LINK} timemory-ert-hip-object)
+        endif()
+    endforeach()
+endif()
