--- a/source/timemory/variadic/CMakeLists.txt
+++ b/source/timemory/variadic/CMakeLists.txt
@@ -11,5 +11,4 @@ build_intermediate_library(
     FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
-    DEPENDS             timemory::timemory-core
-                        timemory::timemory-manager)
+    DEPENDS             timemory::timemory-core)
