--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
+if(TIMEMORY_USE_PYTHON AND TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
     checkout_git_submodule(RECURSIVE
         RELATIVE_PATH external/line-profiler
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
@@ -14,7 +14,7 @@ if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
     endif()
 endif()
 
-if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_HATCHET)
+if(TIMEMORY_USE_PYTHON AND TIMEMORY_BUILD_PYTHON_HATCHET)
     checkout_git_submodule(RECURSIVE
         RELATIVE_PATH external/hatchet
         WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
@@ -72,4 +72,12 @@ if(TIMEMORY_BUILD_PYTHON AND TIMEMORY_BUILD_PYTHON_HATCHET)
                 OPTIONAL)
         endif()
     endif()
+endif()
+
+if(NOT TARGET _line_profiler)
+    set(TIMEMORY_BUILD_PYTHON_LINE_PROFILER OFF PARENT_SCOPE)
+endif()
+
+if(NOT TARGET hatchet)
+    set(TIMEMORY_BUILD_PYTHON_HATCHET OFF PARENT_SCOPE)
 endif()
