--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -503,7 +503,7 @@ add_subdirectory(python)
 # named 'timemory-plotter' as C++ JSON outputs can use this
 # to generate plots
 #
-if((TIMEMORY_BUILD_PYTHON OR TIMEMORY_USE_PYTHON) AND NOT SKBUILD)
+if(TIMEMORY_USE_PYTHON AND NOT SKBUILD)
     configure_file(${PROJECT_SOURCE_DIR}/timemory/plotting/__main__.py
         ${PROJECT_BINARY_DIR}/timemory-plotter @ONLY)
 
