Build system fixes
- remove absolute rpath when SKBUILD/SPACK_BUILD
- add hatchet/tests/timemory_tests.py to cmake_proces_manifest
- tweaks to {dl,rt,pthread}_LIBRARY
- warn about PYBIND11_INSTALL
- timemory-{c,cxx,fortran} alias libraries in build tree
- fixes to building timemory-{mpip,ncclp,mallocp}-shared when static cxx

--- a/source/tools/timemory-mpip/CMakeLists.txt
+++ b/source/tools/timemory-mpip/CMakeLists.txt
@@ -1,11 +1,19 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
-if(NOT TIMEMORY_USE_GOTCHA OR NOT TIMEMORY_USE_MPI OR NOT TARGET timemory::timemory-cxx-shared)
+if(NOT TIMEMORY_USE_GOTCHA OR NOT TIMEMORY_USE_MPI OR
+    (BUILD_STATIC_LIBS AND NOT BUILD_SHARED_LIBS AND NOT CMAKE_POSITION_INDEPENDENT_CODE))
     return()
 endif()
 
 if(NOT TIMEMORY_BUILD_MPIP_LIBRARY OR TIMEMORY_SKIP_BUILD OR TIMEMORY_BUILD_EXCLUDE_FROM_ALL)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
+endif()
+
+if(NOT TARGET timemory::timemory-cxx)
+    if(TIMEMORY_BUILD_MPIP_LIBRARY)
+        message(WARNING "timemory-mpip-library cannot be built due to missing timemory::timemory-cxx target")
+    endif()
+    return()
 endif()
 
 project(timemory-mpip-tool)
@@ -16,7 +24,7 @@ add_library(timemory::timemory-mpip-shared ALIAS timemory-mpip-shared)
 # public link targets
 target_link_libraries(timemory-mpip-shared PUBLIC
     timemory::timemory-headers
-    timemory::timemory-cxx-shared
+    timemory::timemory-cxx
     timemory::timemory-mpi
     timemory::timemory-gotcha)
 
