--- a/source/tools/timemory-ncclp/CMakeLists.txt
+++ b/source/tools/timemory-ncclp/CMakeLists.txt
@@ -1,11 +1,19 @@
 cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
-if(NOT TIMEMORY_USE_GOTCHA OR NOT TIMEMORY_USE_NCCL OR NOT TARGET timemory::timemory-cxx-shared)
+if(NOT TIMEMORY_USE_GOTCHA OR NOT TIMEMORY_USE_NCCL OR
+    (BUILD_STATIC_LIBS AND NOT BUILD_SHARED_LIBS AND NOT CMAKE_POSITION_INDEPENDENT_CODE))
     return()
 endif()
 
 if(NOT TIMEMORY_BUILD_NCCLP_LIBRARY OR TIMEMORY_SKIP_BUILD OR TIMEMORY_BUILD_EXCLUDE_FROM_ALL)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
+endif()
+
+if(NOT TARGET timemory::timemory-cxx)
+    if(TIMEMORY_BUILD_NCCLP_LIBRARY)
+        message(WARNING "timemory-ncclp-library cannot be built due to missing timemory::timemory-cxx target")
+    endif()
+    return()
 endif()
 
 project(timemory-ncclp-tool)
@@ -16,7 +24,7 @@ add_library(timemory::timemory-ncclp-shared ALIAS timemory-ncclp-shared)
 # public link targets
 target_link_libraries(timemory-ncclp-shared PUBLIC
     timemory::timemory-headers
-    timemory::timemory-cxx-shared
+    timemory::timemory-cxx
     timemory::timemory-nccl
     timemory::timemory-gotcha)
 
