GPU kernel instrumentation examples
- Added ex_kernel_instrumentation_v3
  - does not require modifying kernel call
- TIMEMORY_BUILD_LTO fixes (cmake)
- TIMEMORY_SAVE_VARIABLES fixes (cmake)
- TIMEMORY_RESTORE_VARIABLES fixes (cmake)
- Removed disabling CMAKE_INTERPROCEDURAL_OPTIMIZATION from examples (cmake)
- fixed compiler-instrumentation + LTO (cmake)

--- a/examples/ex-minimal/CMakeLists.txt
+++ b/examples/ex-minimal/CMakeLists.txt
@@ -32,17 +32,13 @@ endfunction()
 get_library(TIMEMORY_C_LIBRARY C)
 get_library(TIMEMORY_CXX_LIBRARY CXX)
 
-# this tend to cause the CI to exceed the time-limit
-set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
-
 # headers are always available
 add_executable(ex_cxx_minimal ex_minimal.cpp)
-target_link_libraries(ex_cxx_minimal PRIVATE timemory-minimal-example)
-install(
-    TARGETS ex_cxx_minimal
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+target_link_libraries(ex_cxx_minimal PRIVATE
+	timemory-minimal-example)
+install(TARGETS ex_cxx_minimal
+	DESTINATION bin
+    COMPONENT examples OPTIONAL)
 
 # if C stubs are not available via CXX library
 if(NOT TIMEMORY_CXX_LIBRARY)
@@ -51,21 +47,17 @@ endif()
 
 add_executable(ex_cxx_minimal_library ex_minimal_library.cpp)
 target_link_libraries(ex_cxx_minimal_library timemory-minimal-example
-                      ${TIMEMORY_CXX_LIBRARY})
-install(
-    TARGETS ex_cxx_minimal_library
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+    ${TIMEMORY_CXX_LIBRARY})
+install(TARGETS ex_cxx_minimal_library
+	DESTINATION bin
+    COMPONENT examples OPTIONAL)
 
 add_executable(ex_cxx_minimal_library_overload ex_minimal_library_overload.cpp)
 target_link_libraries(ex_cxx_minimal_library_overload timemory-minimal-example
-                      ${TIMEMORY_CXX_LIBRARY})
-install(
-    TARGETS ex_cxx_minimal_library_overload
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+    ${TIMEMORY_CXX_LIBRARY})
+install(TARGETS ex_cxx_minimal_library_overload
+	DESTINATION bin
+    COMPONENT examples OPTIONAL)
 
 if(NOT PYTHON_EXECUTABLE)
     set(PYTHON_EXECUTABLE "/usr/bin/env python")
@@ -88,30 +80,28 @@ if(NOT TIMEMORY_C_LIBRARY)
 endif()
 
 add_executable(ex_c_minimal ex_minimal.c)
-target_link_libraries(ex_c_minimal PRIVATE timemory-minimal-example ${TIMEMORY_C_LIBRARY})
-install(
-    TARGETS ex_c_minimal
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+target_link_libraries(ex_c_minimal  PRIVATE
+	timemory-minimal-example
+	${TIMEMORY_C_LIBRARY})
+install(TARGETS ex_c_minimal
+	DESTINATION bin
+	COMPONENT examples OPTIONAL)
 
 # if C stubs via CXX library are available
 add_executable(ex_c_minimal_library ex_minimal_library.c)
-target_link_libraries(
-    ex_c_minimal_library PRIVATE timemory-minimal-example ${TIMEMORY_CXX_LIBRARY}
-                                 ${TIMEMORY_C_LIBRARY})
-install(
-    TARGETS ex_c_minimal_library
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+target_link_libraries(ex_c_minimal_library PRIVATE
+	timemory-minimal-example
+    ${TIMEMORY_CXX_LIBRARY}
+	${TIMEMORY_C_LIBRARY})
+install(TARGETS ex_c_minimal_library
+	DESTINATION bin
+    COMPONENT examples OPTIONAL)
 
 add_executable(ex_c_minimal_library_overload ex_minimal_library_overload.c)
-target_link_libraries(
-    ex_c_minimal_library_overload PRIVATE timemory-minimal-example
-                                          ${TIMEMORY_CXX_LIBRARY} ${TIMEMORY_C_LIBRARY})
-install(
-    TARGETS ex_c_minimal_library_overload
-    DESTINATION bin
-    COMPONENT examples
-    OPTIONAL)
+target_link_libraries(ex_c_minimal_library_overload PRIVATE
+	timemory-minimal-example
+	${TIMEMORY_CXX_LIBRARY}
+	${TIMEMORY_C_LIBRARY})
+install(TARGETS ex_c_minimal_library_overload
+	DESTINATION bin
+    COMPONENT examples OPTIONAL)
