--- a/source/tools/timemory-compiler-instrument/CMakeLists.txt
+++ b/source/tools/timemory-compiler-instrument/CMakeLists.txt
@@ -71,6 +71,10 @@ target_link_libraries(
     INTERFACE timemory::timemory-compile-extra timemory::timemory-compile-options
               timemory::timemory-hidden-visibility)
 
+# avoid timemory-compile-options because it might include timemory-lto
+target_compile_options(timemory-compiler-instrument-compile-options INTERFACE
+    ${timemory_CXX_FLAGS})
+
 add_target_cxx_flag_if_avail(timemory-compiler-instrument-compile-options
                              "-ftls-model=local-dynamic")
 
