python gotcha fixes + more
- line_profiler script fix
- ring_buffer return args from read/write
- storage merge() fix
- added final to storage and tsettings classes
- removed runtime_configurable restriction for do_enumerator_generate
- added operation::python_class_name
- moved gotcha_suppression to own file
- updated libex_bindings
- python: timemory.start_profiling
- python: timemory.stop_profiling
- python: tools submodule
- python: tools function wrappers
- fix to get_hash_identifier
- removed concurrency comparison in diff output

--- a/timemory/__init__.py.in
+++ b/timemory/__init__.py.in
@@ -163,6 +163,7 @@ else:
         from . import mpi_support as mpi_support
         from . import mpi as mpi
         from . import util as util
+        from . import tools as tools
         from . import bundle as bundle
         from . import options as options
         from . import units as units
@@ -180,6 +181,7 @@ else:
         sys.modules["timemory.mpi_support"] = mpi_support
         sys.modules["timemory.mpi"] = mpi
         sys.modules["timemory.util"] = util
+        sys.modules["timemory.tools"] = tools
         sys.modules["timemory.bundle"] = bundle
         sys.modules["timemory.options"] = options
         sys.modules["timemory.units"] = units
