--- a/timemory/CMakeLists.txt
+++ b/timemory/CMakeLists.txt
@@ -26,7 +26,7 @@ file(RELATIVE_PATH LIB_RELPATH "${_PYLIB}"
 set(PYTHON_SUBMODULE_FOLDERS
     analyze api ert mpi mpi_support plotting profiler roofline
     util bundle component hardware_counters test trace region
-    libs)
+    tools libs)
 
 file(GLOB PYTHON_SUBMODULE_FILES ${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/*.py)
 string(REPLACE "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/" ""
@@ -181,6 +181,6 @@ if(TIMEMORY_USE_PYTHON)
     timemory_python_console_script("timemory-python-trace" "timemory.trace" "main")
 
     if(TIMEMORY_BUILD_PYTHON_LINE_PROFILER)
-        timemory_python_console_script("timemory-python-line-profiler" "timemory.profiler" "main")
+        timemory_python_console_script("timemory-python-line-profiler" "timemory.line_profiler" "main")
     endif()
 endif()
